<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:theme="@style/SignUpPhone"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_s8_slajd_rejestracja_true"

            />

        <TextView
            android:id="@+id/text2_step7"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/bg_Profitz"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text2_step5"
            android:textStyle="bold"
            android:textSize="29sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_promocode"
            android:layout_width="match_parent"
            app:errorTextColor="@color/red"
            android:textColorHint="@color/bg_Profitz"
            app:helperTextTextColor="@color/gray"
            app:hintTextColor="@color/gray"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintTop_toBottomOf="@id/text2_step7"
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:boxStrokeColor="#878787"
            android:background="@color/transparent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:boxStrokeWidth="1dp"
            android:inputType="textCapCharacters"
            app:shapeAppearance="@style/Rounded"
            app:counterTextColor="@color/gray"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPromoCode"
                android:drawableTint="@color/colorPrimaryMid"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textColorHint="@color/bg_Profitz"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:textColorHighlight="@color/bg_Profitz"
                android:padding="10dp"
                android:textColorLink="@color/bg_Profitz"
                android:textAlignment="textStart"
                android:singleLine="true"
                android:ems="15"
                android:textColor="@color/bg_Profitz"
                android:hint="@string/text3_step5"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text4_step7"
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/input_layout_promocode"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/bg_Profitz"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text4_step5"
            android:textSize="13sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
